--- a/_sass/site_header.scss
+++ b/_sass/site_header.scss
@@ -1,8 +1,3 @@
-.site-header-wrap {
-    border-bottom: 4px solid $flipdot-yellow;
-    box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.1);
-}
-
 .site-header {
     display: flex;
     justify-content: space-between;
@@ -12,6 +7,9 @@
     max-width: $max-content-width;
 
     .title {
+        flex-grow: 1;
+        z-index: 20;
+        background-color: #fff;
         padding: .5rem;
     }
 
@@ -20,27 +18,16 @@
     }
 }
 
-.site-nav {
-    padding: 0 .5em;
+.site-header-separator {
+    position: relative;
+    z-index: 20;
+    height: 4px;
+    background-color: $flipdot-yellow;
+    box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.1);
 }
 
 #site-nav-dropdown-checkbox {
     display: none;
-}
-
-.site-nav-dropdown-button {
-    display: block;
-    padding: .5rem .8rem;
-    font-size: 2rem;
-    line-height: 2rem;
-
-    cursor: pointer;
-    border-radius: .3rem;
-    transition: background-color .2s;
-
-    &:hover {
-        background-color: #eee;
-    }
 }
 
 .site-nav-items {
@@ -58,26 +45,30 @@
 }
 
 @media screen and (max-width: 767px) {
-    .site-nav {
-        align-self: center;
-    }
-
-    .site-nav-items {
-        display: block;
-        position: absolute;
-        top: calc(4rem + 4px);
-        left: 0;
-        right: 0;
-
+    .site-nav-dropdown-button-wrap {
+        position: relative;
+        background-color: #fff;
         z-index: 20;
-        border-bottom: 4px solid $flipdot-yellow;
-        box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.2);
+
+        display: flex;
+        align-items: center;
+        height: 100%;
+        padding: 0 .5em;
     }
 
-    .site-nav-items a:before {
-        content: '»';
-        margin: 0 .5em 0 .2em;
-        color: $text-grey;
+    .site-nav-dropdown-button {
+        display: block;
+        padding: .5rem .8rem;
+        font-size: 2rem;
+        line-height: 2rem;
+
+        cursor: pointer;
+        border-radius: .3rem;
+        transition: background-color .2s;
+
+        &:hover {
+            background-color: #eee;
+        }
     }
 
     #site-nav-dropdown-checkbox:not(:checked) + .site-nav-items {
@@ -92,11 +83,11 @@
         display: block;
         z-index: 10;
 
-        position: absolute;
-        top: calc(4rem + 4px);
+        position: fixed;
+        top: 0;
         right: 0;
-        width: 100%;
-        height: calc(100% - 4rem - 4px);
+        width: 100vw;
+        height: 100vh;
 
         border: none;
         outline: none;
@@ -105,6 +96,24 @@
         appearance: none;
 
         background-color: rgba(0, 0, 0, 0.2);
+    }
+
+    .site-nav-items {
+        display: block;
+        position: absolute;
+        top: calc(4rem + 4px);
+        left: 0;
+        right: 0;
+
+        z-index: 30;
+        border-bottom: 4px solid $flipdot-yellow;
+        box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.2);
+    }
+
+    .site-nav-items a:before {
+        content: '»';
+        margin: 0 .5em 0 .2em;
+        color: $text-grey;
     }
 }
 
